--- a/angular.json
+++ b/angular.json
@@ -1,29 +1,36 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "$schema": "./node_modules/@angular-devkit/core/src/workspace/workspace-schema.json",
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ngx-editor": {
-      "root": "",
-      "sourceRoot": "src",
+    "demo": {
+      "root": "demo",
       "projectType": "application",
-      "prefix": "app",
-      "schematics": {},
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ngx-editor",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.app.json",
+            "outputPath": "dist/demo",
+            "index": "demo/src/index.html",
+            "main": "demo/src/main.ts",
+            "polyfills": "demo/src/polyfills.ts",
+            "tsConfig": "demo/src/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              {
+                "glob": "favicon.ico",
+                "input": "demo/src",
+                "output": "/"
+              },
+              {
+                "glob": "**/*",
+                "input": "demo/src/assets",
+                "output": "/assets"
+              }
             ],
             "styles": [
-              "src/styles.css"
+              {
+                "input": "demo/src/styles.scss"
+              }
             ],
             "scripts": []
           },
@@ -31,8 +38,8 @@
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
+                  "src": "demo/src/environments/environment.ts",
+                  "replaceWith": "demo/src/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
@@ -50,18 +57,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ngx-editor:build"
+            "browserTarget": "demo:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ngx-editor:build:production"
+              "browserTarget": "demo:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ngx-editor:build"
+            "browserTarget": "demo:build"
           }
         },
         "test": {
@@ -70,14 +77,24 @@
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/karma.conf.js",
+            "karmaConfig": "karma.conf.js",
             "styles": [
-              "src/styles.css"
+              {
+                "input": "styles.css"
+              }
             ],
             "scripts": [],
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              {
+                "glob": "favicon.ico",
+                "input": "src/",
+                "output": "/"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/assets",
+                "output": "/assets"
+              }
             ]
           }
         },
@@ -95,7 +112,7 @@
         }
       }
     },
-    "ngx-editor-e2e": {
+    "demo-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -103,12 +120,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ngx-editor:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "ngx-editor:serve:production"
-            }
+            "devServerTarget": "demo:serve"
           }
         },
         "lint": {
@@ -122,6 +134,5 @@
         }
       }
     }
-  },
-  "defaultProject": "ngx-editor"
+  }
 }
